@@ -1,5 +1,9 @@
 2001-11-20  Fumitoshi UKAI  <ukai@debian.or.jp>
 
+	* w3mhelperpanel.c (extractMailcapEntry): remove unused variables
+	* istream.c (StrISgets): add parentheses around assignment used 
+	  as truth value
+	
 	* XMakefile (clean): remove funcname.c funcname1.h funcname2.h
 	  these are autogenerated files.
 	* funcname.c funcname1.h funcname2.h: removed from CVS
@@ -15,7 +19,7 @@
 	* ftp.c (ftp_escape_str ftp_restore_str): remove not used functions
 	* indep.c (getescapechar): remove unused variable
 	
-	* proto.h: add missin prototypes
+	* proto.h: add missing prototypes
 
 2001-11-20  Kiyokazu SUTO <suto@ks-and-ks.ne.jp>
 
